<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/desertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_deserts"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/chooseDesert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_desert"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/teal_700"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/desertText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/donut_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="showDonutOrderMessage"
        android:src="@drawable/doughnut__45_"
        app:layout_constraintTop_toBottomOf="@id/chooseDesert"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/chocolate_donut"/>
    <TextView
        android:id="@+id/dount_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_donut"
        android:textStyle="italic"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/chooseDesert"
        app:layout_constraintLeft_toRightOf="@+id/donut_image"
        app:layout_constraintBottom_toBottomOf="@id/donut_image"/>
    <ImageView
        android:id="@+id/icecream_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icecream"
        app:layout_constraintTop_toBottomOf="@id/donut_image"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/ice_cream"
        android:onClick="showIceCreamMessage"/>
    <TextView
        android:id="@+id/icecream_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ice_cream"
        android:textStyle="italic"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/donut_image"
        app:layout_constraintLeft_toRightOf="@+id/icecream_image"
        app:layout_constraintBottom_toBottomOf="@id/icecream_image"/>
    <ImageView
        android:id="@+id/muffin_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="showMuffinOrder"
        android:src="@drawable/muffin"
        app:layout_constraintTop_toBottomOf="@id/icecream_image"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/ice_cream"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/muffins"
        android:textStyle="italic"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/icecream_image"
        app:layout_constraintLeft_toRightOf="@+id/muffin_image"
        app:layout_constraintBottom_toBottomOf="@id/muffin_image"/>


</androidx.constraintlayout.widget.ConstraintLayout>